# Robotica-Groep-9

./: .gitignore  README.md
Python/Robotica-Vision/: Camera.py  Color.py  ColorFiltering.py  FindEyes.py  FindInstrumentEyes.py  FindInstruments.py  FindTargets.py  FindTrajectory.py  Frame.py  ImageRequester.py  Instrument.py  ShapeAndAreaExamples.py  Target.py  TargetIdentificationTang.py  brick.py  color.py  color_filtering.py  color_manager.py  create_grid_on_frame.py  find_instruments.py  find_targets.py  find_trajectory.py  frame.py  frame_processor.py  geometry_utils.py  instrument.py  main.py  robot.py  server.py  target.py  target_identification.py  target_processor.py  using_webcam.py
Python/host/: web_server.py  webcam_server.py  webcam_server.py.save  webserver.py
Python/host-tjalling/: web_server.py
Python/webserver-pi/: web_server.py
Robotica-Vision/: instrument.py
Robotica-Vision/Example code/: find_trajectory.py
Virtual Twin Webots/worlds/: .Robotica.wbproj  Robotica.wbt
Vision/: color.py  color_manager.py  frame.py  geometry_utils.py  image_requester.py  instrument.py  main.py  robot.py  target.py
Vision/Example code/: ShapeAndAreaExamples.py  find_instruments.py  using_webcam.py
Vision/Images/: map pixels.pdn  webcam.pdn
ros/servo controller/: documentatie servocontroller.md
ros/servo controller/ros2_ws/src/my_ax12_controller/: CMakeLists.txt  dynamixel_control.py  setup.cfg  setup.py
virtualTwinweBots/worlds/: .Robotica.wbproj  Robotica.wbt
webserver-pi/: web_server.py
webserver-pi/controller/: bluetooth_controller.py
(+83 files in other folders)
